# simple-notes-desktop

./: .editorconfig  .gitattributes  .gitignore  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  README.de.md  README.md  biome.json  changelog-short.txt  commit-f1.txt  commit-f2.txt  commit-f3.txt  commit-f4.txt  commit-phase1.txt  index.html  package.json  pnpm-lock.yaml  vite.config.js  vitest.config.js
.github/workflows/: build.yml  deploy-pages.yml
aur/: .SRCINFO  PKGBUILD  README.md  upload-aur.sh
docs/: ARCH_INSTALL.md  SETUP.md
scripts/: build.mjs  bump-version.sh  dev.mjs  simple-notes-desktop-launcher.sh  update-aur-sha.sh
src/: main.js  styles.css
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/desktop-template/: simple-notes-desktop.desktop
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  folders.rs  lib.rs  local_store.rs  main.rs  markdown.rs  models.rs  scheduler.rs  storage.rs  sync_engine.rs  sync_queue.rs  webdav.rs
src/__tests__/: changelogParser.test.js  checklistSort.test.js  dialogService.test.js  folderName.test.js  noteService.test.js  settingsDialog.test.js  setup.js
src/components/: ChangelogDialog.js  ConflictDialog.js  ConnectionDialog.js  NoteEditor.js  NotesList.js  SettingsDialog.js  UpdateToast.js
src/services/: DialogService.js  noteService.js  tauri.js
src/utils/: ColorPicker.js  UndoStack.js  changelogParser.js  folderName.js  markdownHighlight.js  markdownToolbar.js  noteColors.js  themes.js
